# hybrid_plant

./: .gitignore  MODEL_TDD.md  README.md  diag_script.py  pyproject.toml  smoke_test.py
.claude/: settings.local.json
configs/: augmentation.yaml  bess.yaml  finance.yaml  project.yaml  regulatory.yaml  solver.yaml  tariffs.yaml
data/: bess_soh_curve.csv  load_profile_8760.csv  solar_cuf_8760.csv  solar_efficiency_curve.csv  wind_cuf_8760.csv  wind_efficiency_curve.csv
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scripts/: compare_aug.py  trace_pipeline.py  validate_lcoe.py  validate_lcoe2.py
src/: config_loader.py  data_loader.py  run_model.py  test_energy.py  test_finance.py  test_solver.py  validate_solver.py
src/energy/: grid_interface.py  meter_layer.py  plant_engine.py  year1_engine.py
src/finance/: capex_model.py  cashflow_model.py  debt_model.py  energy_projection.py  finance_engine.py  irr_utils.py  landed_tariff_model.py  lcoe_model.py  opex_model.py  savings_model.py
src/hybrid_plant/: __main__.py  _paths.py  config_loader.py  constants.py  data_loader.py  run_model.py
src/hybrid_plant/augmentation/: __init__.py  augmentation_engine.py  augmentation_pre_analysis.py  augmentation_result.py  augmentation_solver.py  cohort.py  cuf_evaluator.py  engine.py  lifecycle.py  lifecycle_simulator.py  oversize_optimizer.py  sizing.py
src/hybrid_plant/energy/: grid_interface.py  meter_layer.py  plant_engine.py  year1_engine.py
src/hybrid_plant/finance/: _utils.py  augmentation_engine.py  capex_model.py  energy_projection.py  finance_engine.py  landed_tariff_model.py  lcoe_model.py  opex_model.py  savings_model.py
src/hybrid_plant/pyomo/: model_builder.py  parameter_builder.py  post_solve.py  pyomo_config.py  solver_runner.py
src/solver/: plant_solver.py  solver_engine.py
tests/: conftest.py  test_augmentation.py  test_augmentation_pre_analysis.py  test_energy.py  test_finance.py  test_solver.py  validate_solver.py
(+1 files in other folders)
